chore: add findBiId user
