# back-end/src/routes/user.route.js
@@ -1,5 +1,5 @@
 import {Router} from "express";
-import {createUser, findAllUser, updateUser} from "../controllers/user.controller.js";
+import {createUser, findAllUser, findById, updateUser} from "../controllers/user.controller.js";
 import{validId} from "../middlewares/global.middlewares.js";
 import{authMiddleware} from "../middlewares/global.middlewares.js"
 
@@ -7,6 +7,7 @@ const router = Router();
 
 router.post("/", createUser);
 router.get("/", authMiddleware,findAllUser);
-router.patch("/:id",authMiddleware, validId , updateUser);
+router.get("/:id",findById);
+router.patch("/:id", validId,authMiddleware, updateUser);
 
 export default router;
