# back-end/swagger.json
@@ -93,6 +93,37 @@
                 }
             }
         },
+        "/user/{id}/": {
+            "get": {
+                "summary": "Search all user by id",
+                "description": "Route responsible for fetching user by id",
+                "tags": [
+                    "User"
+                ],
+                "security": [{ "bearerAuth": [] }],
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Not Found"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/User"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/{id}": {
             "patch": {
                 "summary": "Update user",
